events-microservice/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-microservice
  namespace: bicycle-network
  labels:
    app: events-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-microservice
  template:
    metadata:
      labels:
        app: events-microservice
    spec:
      containers:
        - name: events-microservice
          image: 628786078121.dkr.ecr.us-east-1.amazonaws.com/events-microservice:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
