events-microservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-microservice
  namespace: bicycle-network
spec:
  selector:
    app: events-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
